tests/typing/bad/testfile-redef-11.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int putchar(int n) {}
int main() {}

